--- a/Test2.ipynb
+++ b/Test2.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-08-29T18:34:21.465578Z",
-     "start_time": "2024-08-29T18:34:12.606686Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import os\n",
@@ -40,15 +36,10 @@
     "X, y = load_data(data_dir)\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T18:34:21.802638Z",
-     "start_time": "2024-08-29T18:34:21.486307Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -67,33 +58,11 @@
     "print(classification_report(y_test, y_pred))\n"
    ],
    "id": "5aae392f61dbb0a6",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    Abnormal       1.00      1.00      1.00         2\n",
-      "   HighSpeed       1.00      1.00      1.00         2\n",
-      "    lowSpeed       1.00      1.00      1.00         2\n",
-      "\n",
-      "    accuracy                           1.00         6\n",
-      "   macro avg       1.00      1.00      1.00         6\n",
-      "weighted avg       1.00      1.00      1.00         6\n",
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T18:36:29.476413Z",
-     "start_time": "2024-08-29T18:34:21.882548Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import sounddevice as sd\n",
@@ -132,29 +101,8 @@
     "    print(\"Stopped by user.\")\n"
    ],
    "id": "9275a627ab23c51c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recording...\n",
-      "Recording complete.\n",
-      "Predicted class: lowSpeed\n",
-      "Recording...\n",
-      "Recording complete.\n",
-      "Predicted class: HighSpeed\n",
-      "Recording...\n",
-      "Recording complete.\n",
-      "Predicted class: lowSpeed\n",
-      "Recording...\n",
-      "Recording complete.\n",
-      "Predicted class: lowSpeed\n",
-      "Recording...\n",
-      "Stopped by user.\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
