--- a/Test2.ipynb
+++ b/Test2.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import os\n",
     "import librosa\n",
@@ -34,13 +36,31 @@
     "\n",
     "data_dir = './dataset/'\n",
     "X, y = load_data(data_dir)\n"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "5aae392f61dbb0a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    Abnormal       1.00      1.00      1.00         2\n",
+      "   HighSpeed       1.00      1.00      1.00         2\n",
+      "    lowSpeed       1.00      1.00      1.00         2\n",
+      "\n",
+      "    accuracy                           1.00         6\n",
+      "   macro avg       1.00      1.00      1.00         6\n",
+      "weighted avg       1.00      1.00      1.00         6\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -56,14 +76,26 @@
     "# Evaluate the model\n",
     "y_pred = clf.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))\n"
-   ],
-   "id": "5aae392f61dbb0a6",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "9275a627ab23c51c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sounddevice'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msounddevice\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict_live_sound\u001b[39m(model, duration\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, sample_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m22050\u001b[39m):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sounddevice'"
+     ]
+    }
+   ],
    "source": [
     "import sounddevice as sd\n",
     "from matplotlib import pyplot as plt\n",
@@ -99,10 +131,7 @@
     "        predict_live_sound(clf)\n",
     "except KeyboardInterrupt:\n",
     "    print(\"Stopped by user.\")\n"
-   ],
-   "id": "9275a627ab23c51c",
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
@@ -114,14 +143,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
